Renamed unique identifier. DAT-3283
