# api_server/openapi_server/controllers/default_controller.py
@@ -13,7 +13,7 @@ def generic_get_multiple():  # noqa: E501
     return 'do some magic!'
 
 
-def generic_get_single():  # noqa: E501
+def generic_get_single(unique_id):  # noqa: E501
     """generic_get_single
 
     Returns an entity based on a kind # noqa: E501
@@ -31,7 +31,7 @@ def generic_post_single():  # noqa: E501
     return 'do some magic!'
 
 
-def generic_put_single():  # noqa: E501
+def generic_put_single(unique_id):  # noqa: E501
     """generic_put_single
 
     Updates an entity based on a kind  # noqa: E501
